--- a/styles/global.sass
+++ b/styles/global.sass
@@ -64,20 +64,31 @@
     background-color: #f6f4f2
 
 
+
 .nav
     position: absolute
     top: 0
     width: 100%
     padding: .625rem
     display: flex
+    align-items: center
     justify-content: space-between
+    
+    &__logo-container
+        height: 100%
+        width: 10rem
 
-.nav__list
-    list-style: none
-    display: flex
+        &-img
+            height: 2rem
+            width: auto
+            color: black
 
-.nav__list-item
-    margin-right: 3rem
+    &__list
+        list-style: none
+        display: flex
+
+    &__list-item
+        margin-right: 3rem
 
 
-.footer
+// .footer
