completed socials section

--- a/styles/global.sass
+++ b/styles/global.sass
@@ -79,6 +79,7 @@
         width: 10rem
 
         &-img
+            margin-left: 1rem
             height: 2rem
             width: auto
             color: black
