--- a/styles/index.css
+++ b/styles/index.css
@@ -101,6 +101,12 @@
   justify-content: center;
   padding: 1rem;
 }
+.services__list-item:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  transition: background-color 1s ease;
+  transition: color 1s ease;
+}
 .services__link {
   font-family: "Saol Display";
   weight: 600;
@@ -109,4 +115,51 @@
   text-decoration: none;
   font-size: 1.75rem;
   line-height: 2.1rem;
+}
+
+.socials {
+  background-color: rgb(200, 182, 163);
+}
+.socials__heading {
+  color: white;
+  height: 7.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: "Saol Display";
+  font-size: 3.75rem;
+  font-weight: 200;
+}
+.socials__container {
+  display: flex;
+  width: 100%;
+  height: 30rem;
+}
+.socials__group {
+  width: 50%;
+  height: 100%;
+  display: flex;
+}
+.socials__group-big {
+  width: 65%;
+  height: 100%;
+}
+.socials__group-col {
+  width: 35%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.socials__group-small {
+  width: 100%;
+  height: 50%;
+}
+.socials__post-image {
+  height: 100%;
+  width: 100%;
+  opacity: 1;
+}
+.socials__post-image:hover {
+  opacity: 0.5;
+  transition: 0.5s ease;
 }/*# sourceMappingURL=index.css.map */
