--- a/styles/index.css
+++ b/styles/index.css
@@ -141,6 +141,7 @@
   display: flex;
 }
 .socials__group-big {
+  position: relative;
   width: 65%;
   height: 100%;
 }
@@ -151,15 +152,31 @@
   flex-direction: column;
 }
 .socials__group-small {
+  position: relative;
   width: 100%;
   height: 50%;
+}
+.socials__link:hover .socials__post-image {
+  opacity: 0.5;
+  transition: 0.5s ease;
+}
+.socials__link:hover .socials__post-logo {
+  display: flex;
+  transition: 0.5s ease;
 }
 .socials__post-image {
   height: 100%;
   width: 100%;
   opacity: 1;
 }
-.socials__post-image:hover {
-  opacity: 0.5;
-  transition: 0.5s ease;
+.socials__post-logo {
+  position: absolute;
+  display: none;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=index.css.map */
