--- a/styles/index.sass
+++ b/styles/index.sass
@@ -145,6 +145,7 @@
         display: flex
 
     &__group-big
+        position: relative
         width: 65%
         height: 100%
 
@@ -155,14 +156,45 @@
         flex-direction: column
 
     &__group-small
+        position: relative
         width: 100%
         height: 50%
     
+
+    &__link:hover 
+        & .socials__post-image
+            opacity: .5
+            transition: .5s ease
+
+        & .socials__post-logo
+            display: flex
+            transition: .5s ease
+
+
+
+
     &__post-image
         height: 100%
         width: 100%
         opacity: 1
     
-        &:hover
-            opacity: .5
-            transition: .5s ease
+        // &:hover
+        //     opacity: .5
+        //     transition: .5s ease
+    
+    &__post-logo
+        position: absolute
+        display: none
+        height: 100%
+        width: 100%
+        top: 0
+        left: 0
+        display: flex
+        align-items: center
+        justify-content: center
+            
+
+        // &:hover
+        //     display: flex
+        //     transition: .5s ease
+
