Completed Socials Section

--- a/styles/index.sass
+++ b/styles/index.sass
@@ -146,7 +146,7 @@
         
 
     &__group-big
-        background: url("../assets/post-1.png")
+        background-image: url("../assets/post-1.png")
         width: 65%
         height: 100%
         background-size: cover
@@ -161,7 +161,7 @@
         flex-direction: column
 
     &__group-small
-        background: url("../assets/post-1.png")
+        background-image: url("../assets/post-1.png")
         width: 100%
         height: 50%
         background-size: cover
@@ -176,7 +176,7 @@
         width: 100%
 
         &:hover 
-            background-color: rgba(200, 182, 163,.25)
+            background-color: rgba(200, 182, 163,.4)
             transition: .5s ease
                 
 
