--- a/styles/index.css
+++ b/styles/index.css
@@ -141,7 +141,7 @@
   display: flex;
 }
 .socials__group-big {
-  background: url("../assets/post-1.png");
+  background-image: url("../assets/post-1.png");
   width: 65%;
   height: 100%;
   background-size: cover;
@@ -155,7 +155,7 @@
   flex-direction: column;
 }
 .socials__group-small {
-  background: url("../assets/post-1.png");
+  background-image: url("../assets/post-1.png");
   width: 100%;
   height: 50%;
   background-size: cover;
@@ -170,7 +170,7 @@
   width: 100%;
 }
 .socials__link:hover {
-  background-color: rgba(200, 182, 163, 0.25);
+  background-color: rgba(200, 182, 163, 0.4);
   transition: 0.5s ease;
 }
 .socials__link:hover .socials__post-logo {
