--- a/styles/index.css
+++ b/styles/index.css
@@ -102,7 +102,8 @@
   padding: 1rem;
 }
 .services__list-item:hover {
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(200, 182, 163);
+  border-color: rgb(200, 182, 163);
   color: black;
   transition: background-color 1s ease;
   transition: color 1s ease;
@@ -170,7 +171,7 @@
   width: 100%;
 }
 .socials__link:hover {
-  background-color: rgba(200, 182, 163, 0.4);
+  background-color: rgba(200, 182, 163, 0.5);
   transition: 0.5s ease;
 }
 .socials__link:hover .socials__post-logo {
