--- a/styles/index.sass
+++ b/styles/index.sass
@@ -106,7 +106,8 @@
         padding: 1rem
 
         &:hover
-            background-color: rgba(255,255,255)
+            background-color: rgb(200, 182, 163)
+            border-color: rgb(200, 182, 163)
             color: black
             transition: background-color 1s ease
             transition: color 1s ease
@@ -176,7 +177,7 @@
         width: 100%
 
         &:hover 
-            background-color: rgba(200, 182, 163,.4)
+            background-color: rgba(200, 182, 163,.5)
             transition: .5s ease
                 
 
