--- a/styles/index.sass
+++ b/styles/index.sass
@@ -205,7 +205,7 @@
         justify-content: center
             
 
-        // &:hover
-        //     display: flex
-        //     transition: .5s ease
-
+ #socials-anchor,
+ #spaces-anchor,
+ #services-anchor
+    scroll-behavior: smooth
