--- a/styles/index.css
+++ b/styles/index.css
@@ -6,61 +6,103 @@
 }
 
 .hero-quote {
-  width: 50%;
+  width: 85%;
   height: auto;
+}
+@media (min-width: 768px) {
+  .hero-quote {
+    width: 50%;
+  }
 }
 
 .spaces {
   width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .spaces__carousel {
-  height: 27rem;
-  max-height: 30rem;
   width: 100%;
   display: flex;
   list-style: none;
   justify-content: space-between;
   padding: 0 1%;
+  flex-wrap: wrap;
+}
+@tablet {
+  .spaces__carousel {
+    flex-direction: row;
+  }
 }
 .spaces__carousel-item {
-  height: 100%;
-  width: 29%;
-  background-color: yellow;
+  width: 100%;
+  height: 20rem;
 }
-.spaces__carousel-item--center {
-  width: 40%;
+@media (min-width: 768px) {
+  .spaces__carousel-item {
+    width: 50%;
+  }
+}
+@media (min-width: 1280px) {
+  .spaces__carousel-item {
+    width: 27%;
+    height: 25rem;
+  }
+}
+@media (min-width: 768px) {
+  .spaces__carousel-item--center {
+    order: 1;
+    width: 100%;
+  }
+}
+@media (min-width: 1280px) {
+  .spaces__carousel-item--center {
+    order: 0;
+    width: 46%;
+  }
 }
 .spaces__carousel-item--img-1 {
   background: url("../assets/space-1.png");
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: 50% 100%;
 }
 .spaces__carousel-item--img-2 {
   background: url("../assets/space-2.png");
-  background-size: 100% 100%;
+  background-size: cover;
+  background-position: 50% 100%;
 }
 .spaces__carousel-item--img-3 {
   background: url("../assets/space-3.png");
-  background-size: 100% 100%;
+  background-size: cover;
   background-position: 50% 100%;
 }
 .spaces__interactive-heading {
-  height: 22.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
+  padding: 4rem;
 }
 .spaces__interactive-heading > .h2 {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: 15rem;
+  font-size: 2rem;
+}
+@media (min-width: 768px) {
+  .spaces__interactive-heading > .h2 {
+    font-size: 3.75rem;
+  }
 }
 .spaces__center-text {
   color: rgb(200, 182, 163);
   position: relative;
   width: 400px;
-  height: 10rem;
+  height: 2.5rem;
+}
+@media (min-width: 768px) {
+  .spaces__center-text {
+    height: 4.25rem;
+  }
 }
 
 .services {
@@ -68,11 +110,20 @@
   background-size: cover;
   background-repeat: no-repeat;
   width: 100%;
+  overflow: hidden;
 }
 .services__heading {
   width: 40rem;
   margin: 0 1rem;
   white-space: nowrap;
+}
+.services__heading.h2 {
+  font-size: 1.6rem;
+}
+@media (min-width: 768px) {
+  .services__heading.h2 {
+    font-size: 3.75rem;
+  }
 }
 .services__heading-container {
   display: flex;
@@ -87,9 +138,11 @@
 }
 .services__list {
   display: flex;
-  padding: 1rem 10rem 3rem 10rem;
+  padding: 1rem 9rem 3rem 9rem;
   list-style: none;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 .services__list-item {
   height: 15rem;
@@ -100,6 +153,7 @@
   align-items: center;
   justify-content: center;
   padding: 1rem;
+  margin: 1rem;
 }
 .services__list-item:hover {
   background-color: rgb(200, 182, 163);
@@ -116,6 +170,7 @@
   text-decoration: none;
   font-size: 1.75rem;
   line-height: 2.1rem;
+  height: 20%;
 }
 
 .socials {
@@ -133,13 +188,33 @@
 }
 .socials__container {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  height: 30rem;
+}
+@media (min-width: 1280px) {
+  .socials__container {
+    flex-direction: row;
+    width: 100%;
+    height: 30rem;
+  }
 }
 .socials__group {
-  width: 50%;
-  height: 100%;
+  width: 100%;
+  height: 30rem;
   display: flex;
+  height: 20rem;
+}
+@media (min-width: 768px) {
+  .socials__group {
+    height: 25rem;
+  }
+}
+@media (min-width: 1280px) {
+  .socials__group {
+    width: 50%;
+    height: 100%;
+    display: flex;
+  }
 }
 .socials__group-big {
   background-image: url("../assets/post-1.png");
@@ -154,6 +229,14 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+}
+.socials__group-col--offset {
+  order: -1;
+}
+@media (min-width: 1280px) {
+  .socials__group-col--offset {
+    order: 0;
+  }
 }
 .socials__group-small {
   background-image: url("../assets/post-1.png");
